Relative location of submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "core"]
 	path = core
-	url = ssh://git@akvarko.frozen-doe.net/pipeline/core.git
+	url = ../core.git
 [submodule "plugin/git"]
 	path = plugin/git
-	url = ssh://git@akvarko.frozen-doe.net/pipeline/plugin/git.git
+	url = ../plugin/git.git
 [submodule "plugin/block_editor"]
 	path = plugin/block_editor
-	url = ssh://git@akvarko.frozen-doe.net/pipeline/plugin/block_editor.git
+	url = ../plugin/block_editor.git
 [submodule "plugin/form"]
 	path = plugin/form
-	url = ssh://git@akvarko.frozen-doe.net/pipeline/plugin/form.git
+	url = ../plugin/form.git
