Add SimpleCRUD and update Admin

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "plugin/admin"]
 	path = plugin/admin
 	url = ../plugin/admin.git
+[submodule "plugin/simplecrud"]
+	path = plugin/simplecrud
+	url = ../plugin/simplecrud.git
