Rename package to cascade/site to reflect git repo name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "cascade/demo",
+	"name": "cascade/site",
 	"description": "Demo installation at cascade.frozen-doe.net",
 	"license": "BSD-3-Clause",
 	"authors": [
