Setting minimum stability to 'dev' (workaround)

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 	"repositories": [
 		{ "type": "composer", "url": "https://akvarko.frozen-doe.net/composer/" }
 	],
+	"minimum-stability": "dev",
 	"require": {
-		"cascade/composer-plugin": "dev-master",
 		"cascade/core": "dev-master",
 		"cascade/book": "dev-master",
 		"cascade/developers_manual": "dev-master"
