--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 	"minimum-stability": "dev",
 	"require": {
 		"cascade/core": "dev-master",
+		"cascade/git": "dev-master",
 		"cascade/book": "dev-master",
 		"cascade/developers_manual": "dev-master"
 	},
