--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,9 @@
 		"cascade/core": "dev-master",
 		"cascade/admin": "dev-master",
 		"cascade/block_editor": "dev-master",
-		"cascade/book": "dev-master",
-		"cascade/developers_manual": "dev-master",
 		"cascade/duf": "dev-master",
+		"cascade/duf_editor": "dev-master",
 		"cascade/git": "dev-master",
-		"cascade/jsondb": "dev-master",
 		"cascade/smalldb": "dev-master"
 	},
 	"config": {
